fix: spacing in Fork Prevention section

--- a/src/containers/LivingWhitepaper/containers/PrincipalEventsAndProcesses/PointsRefilling/PointsRefilling.scss
+++ b/src/containers/LivingWhitepaper/containers/PrincipalEventsAndProcesses/PointsRefilling/PointsRefilling.scss
@@ -1,5 +1,6 @@
 .PointsRefilling {
   &__table {
     margin-top: 32px;
+    word-break: break-word;
   }
 }
